trailers data changed

--- a/src/lib/i18n/messages/en.json
+++ b/src/lib/i18n/messages/en.json
@@ -179,8 +179,8 @@
       "downloads": {
         "Product cards": "Product cards",
 
-        "Product card galvanized PL": "Product card galvanized PL",
-        "Product card galvanized EN": "Product card galvanized EN",
+        "Product card galvanized PL": "Galvanized trailer PL",
+        "Product card galvanized EN": "Galvanized trailer EN",
 
         "Product card powdered": "Powder-coated trailer",
         "Open product card": "Open product card",
