--- a/src/lib/i18n/messages/en.json
+++ b/src/lib/i18n/messages/en.json
@@ -75,8 +75,12 @@
 
   "contact": {
     "Contact": "Contact",
-    "Complaints and returns": "Complaints and\u00A0returns",
-    "We strongly encourage you": "We strongly encourage you to directly contact our salesperson in case of complaints, service remarks, or if you are interested in purchasing additional equipment. The salesperson is well-informed about our products and is ready to provide you with all the necessary information, accept complaints, and process them in cooperation with us. Additionally, they will also respond to any questions that may arise regarding our\u00A0products.",
+    "Complaints and service": "Complaints and\u00A0service",
+    "We strongly encourage you": "We are also ready to\u00A0assist in\u00A0the area of\u00A0servicing our trailers, providing comprehensive technical support and\u00A0repairs.",
+    "Regardless": "Regardless of\u00A0the type of\u00A0issue or\u00A0maintenance required, our qualified technicians are ready to\u00A0provide\u00A0assistance.",
+    "Furthermore": "Furthermore, our range includes a\u00A0wide selection of\u00A0high-quality spare\u00A0parts.",
+    "This means": "This means we can provide our customers with quick and efficient replacement or\u00A0repair of\u00A0parts to\u00A0keep our products in\u00A0excellent technical\u00A0condition.",
+    "With our experience": "With our experience and access to\u00A0a\u00A0variety of\u00A0spare parts, we\u00A0are able to\u00A0meet all of\u00A0our customers' needs and provide them with full confidence in\u00A0the performance and reliability of\u00A0our\u00A0trailers.",
     "We are at your service": "We are at your\u00A0service",
     "contactData": {
       "Assembly plant": "Assembly plant",
