--- a/src/lib/i18n/messages/pl.json
+++ b/src/lib/i18n/messages/pl.json
@@ -75,8 +75,12 @@
 
   "contact": {
     "Contact": "Kontakt",
-    "Complaints and returns": "Reklamacja i\u00A0zwroty",
-    "We strongly encourage you": "Serdecznie zachęcamy do kontaktowania się bezpośrednio z\u00A0naszym sprzedawcą w\u00A0przypadku reklamacji, uwag serwisowych lub jeśli jesteś zainteresowany zakupem dodatkowego sprzętu. Sprzedawca jest dobrze poinformowany na temat naszych produktów i\u00A0jest gotowy udzielić Ci wszelkich potrzebnych informacji, przyjąć zgłoszenie reklamacji i\u00A0przetworzyć je we współpracy z\u00A0nami. Ponadto, będą również odpowiadać na wszystkie pytania, które mogą się pojawić w\u00A0związku z\u00A0naszymi\u00A0produktami.",
+    "Complaints and service": "Reklamacja i\u00A0serwis",
+    "We strongly encourage you": "Jesteśmy gotowi pomóc również w obszarze obsługi naszych przyczep, zapewniając kompleksowe wsparcie techniczne i\u00A0naprawcze.",
+    "Regardless": "Niezależnie od\u00A0rodzaju problemu czy\u00A0konserwacji, nasi wykwalifikowani technicy są\u00A0gotowi służyć\u00A0pomocą.",
+    "Furthermore": "Co więcej, w\u00A0naszej ofercie dostępna jest szeroka gama wysokiej jakości części\u00A0zamiennych.",
+    "This means": "To oznacza, że możemy zapewnić naszym klientom szybką i\u00A0efektywną wymianę lub naprawę części, aby utrzymać nasze produkty w\u00A0doskonałym stanie\u00A0technicznym.",
+    "With our experience": "Dzięki naszemu doświadczeniu oraz dostępowi do różnorodnych części zamiennych, jesteśmy w\u00A0stanie sprostać wszelkim potrzebom naszych klientów i\u00A0zapewnić im pełne zaufanie w\u00A0sprawie sprawności i\u00A0niezawodności naszych\u00A0przyczep.",
     "We are at your service": "Jesteśmy do Twojej\u00A0dyspozycji",
     "contactData": {
       "Assembly plant": "Zakład montażowy",
