--- a/src/lib/i18n/messages/en.json
+++ b/src/lib/i18n/messages/en.json
@@ -76,7 +76,7 @@
   "contact": {
     "Contact": "Contact",
     "Complaints and service": "Complaints and\u00A0service",
-    "We strongly encourage you": "We are also ready to\u00A0assist in\u00A0the area of\u00A0servicing our trailers, providing comprehensive technical support and\u00A0repairs.",
+    "We strongly encourage you": "We also support customers in\u00A0the\u00A0area of\u00A0servicing our trailers, providing comprehensive technical and repair\u00A0support.",
     "Regardless": "Regardless of\u00A0the type of\u00A0issue or\u00A0maintenance required, our qualified technicians are ready to\u00A0provide\u00A0assistance.",
     "Furthermore": "Furthermore, our range includes a\u00A0wide selection of\u00A0high-quality spare\u00A0parts.",
     "This means": "This means we can provide our customers with quick and efficient replacement or\u00A0repair of\u00A0parts to\u00A0keep our products in\u00A0excellent technical\u00A0condition.",
