--- a/src/lib/i18n/messages/pl.json
+++ b/src/lib/i18n/messages/pl.json
@@ -76,7 +76,7 @@
   "contact": {
     "Contact": "Kontakt",
     "Complaints and service": "Reklamacja i\u00A0serwis",
-    "We strongly encourage you": "Jesteśmy gotowi pomóc również w obszarze obsługi naszych przyczep, zapewniając kompleksowe wsparcie techniczne i\u00A0naprawcze.",
+    "We strongly encourage you": "Wspieramy Klientów również w\u00A0obszarze obsługi naszych przyczep, zapewniając kompleksowe wsparcie techniczne i\u00A0naprawcze.",
     "Regardless": "Niezależnie od\u00A0rodzaju problemu czy\u00A0konserwacji, nasi wykwalifikowani technicy są\u00A0gotowi służyć\u00A0pomocą.",
     "Furthermore": "Co więcej, w\u00A0naszej ofercie dostępna jest szeroka gama wysokiej jakości części\u00A0zamiennych.",
     "This means": "To oznacza, że możemy zapewnić naszym klientom szybką i\u00A0efektywną wymianę lub naprawę części, aby utrzymać nasze produkty w\u00A0doskonałym stanie\u00A0technicznym.",
